--- a/GenLauncherNet/Windows/MainWindow.xaml
+++ b/GenLauncherNet/Windows/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GenLauncherNet"
-        xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="GenLauncherNet.MainWindow"
+        xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="GenLauncherNet.Windows.MainWindow"
         mc:Ignorable="d"
         Background="{DynamicResource GenLauncherBackGroundImage}"
         Title="GenLauncher" Height="762" Width="986" ResizeMode="CanMinimize" WindowStyle="SingleBorderWindow">
