--- a/GenLauncherNet/Windows/MainWindow.xaml
+++ b/GenLauncherNet/Windows/MainWindow.xaml
@@ -104,7 +104,7 @@
                 </GradientStopCollection>
             </LinearGradientBrush.GradientStops>
         </LinearGradientBrush>
-        
+
         <LinearGradientBrush x:Key="StandardBrush"
             StartPoint="0,0" EndPoint="0,1">
             <LinearGradientBrush.GradientStops>
@@ -114,8 +114,6 @@
                 </GradientStopCollection>
             </LinearGradientBrush.GradientStops>
         </LinearGradientBrush>
-        
-        <SolidColorBrush x:Key="GlyphBrush" Color="#b2b6fd" />
 
         <Style x:Key="ScrollBarLineButton" TargetType="{x:Type RepeatButton}">
             <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -627,32 +625,42 @@
             <EventSetter Event="GiveFeedback" Handler="ModsList_GiveFeedback" />
         </Style>
 
+        <Style TargetType="{x:Type ContextMenu}">
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="SnapsToDevicePixels" Value="True" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ContextMenu}">
+                        <Border BorderThickness="1" BorderBrush="{DynamicResource GenLauncherBorderColor}" x:Name="Border" Background="{DynamicResource GenLauncherDarkBackGround}">
+                            <StackPanel ClipToBounds="True" Orientation="Vertical" IsItemsHost="True" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <LinearGradientBrush x:Key="MenuItemSelectionFill" EndPoint="0,1" StartPoint="0,0">
-            <GradientStop Color="Red" Offset="0"/>
-            <GradientStop Color="Red" Offset="1"/>
+            <GradientStop Color="{DynamicResource GenLauncherButtonSelectionColor}" Offset="0"/>
+            <GradientStop Color="{DynamicResource GenLauncherButtonSelectionColor}"/>
         </LinearGradientBrush>
-        <Geometry x:Key="Checkmark">M 0,5.1 L 1.7,5.2 L 3.4,7.1 L 8,0.4 L 9.2,0 L 3.3,10.8 Z</Geometry>
+        
         <ControlTemplate x:Key="{ComponentResourceKey ResourceId=SubmenuItemTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}" TargetType="{x:Type MenuItem}">
-            
             <Grid SnapsToDevicePixels="true">
                 <Rectangle x:Name="Bg" Fill="{TemplateBinding Background}" RadiusY="2" RadiusX="2" Stroke="{TemplateBinding BorderBrush}" StrokeThickness="1"/>
                 <Rectangle x:Name="InnerBorder" Margin="1" RadiusY="2" RadiusX="2"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="180"/>
                     </Grid.ColumnDefinitions>
 
-                    <ContentPresenter Grid.Column="0" ContentSource="Header" Margin="10,0,0,0" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                    <ContentPresenter Grid.Column="0" ContentSource="Header" Margin="10,0,0,0" Height="24" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                 </Grid>
             </Grid>
             <ControlTemplate.Triggers>
                 <Trigger Property="IsHighlighted" Value="true">
                     <Setter Property="Fill" TargetName="Bg" Value="{StaticResource MenuItemSelectionFill}"/>
-                    <Setter Property="Stroke" TargetName="Bg" Value="#8071CBF1"/>
-                    <Setter Property="Stroke" TargetName="InnerBorder" Value="#40FFFFFF"/>
-                </Trigger>
-                <Trigger Property="IsEnabled" Value="false">
-                    <Setter Property="Foreground" Value="#FF9A9A9A"/>
+                    <Setter Property="Stroke" TargetName="Bg" Value="{StaticResource MenuItemSelectionFill}"/>
+                    <Setter Property="Stroke" TargetName="InnerBorder" Value="{DynamicResource GenLauncherActiveColor}"/>
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
@@ -673,32 +681,14 @@
             <Grid x:Name="GridItem" Loaded="GridItem_Loaded" Width="550">
 
                 <Grid.ContextMenu>
-                    <ContextMenu>
-                        <MenuItem Header="Menu item 1" Click="MenuItem_Click" HorizontalAlignment="Left"/>
-
-                        <ContextMenu.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Background="White"></StackPanel>
-                            </ItemsPanelTemplate>
-                        </ContextMenu.ItemsPanel>
-                        <ContextMenu.ItemContainerStyle>
-                            <Style TargetType="MenuItem">
-                                <Setter Property="Command" Value="{Binding Path=DataContext.XyzCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"/>
-                                <Setter Property="CommandParameter" Value="{Binding}"/>
-                            </Style>
-                        </ContextMenu.ItemContainerStyle>
-                        <ContextMenu.ItemTemplate>
-                            <DataTemplate>
-                                <Grid Margin="-20,0,-40,0">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="20"/>
-                                        <ColumnDefinition Width="1*"/>
-                                    </Grid.ColumnDefinitions>
-                                </Grid>
-                            </DataTemplate>
-                        </ContextMenu.ItemTemplate>
-
-
+                    <ContextMenu Opened="ContextMenu_Opened" >
+                        <MenuItem Header="Open mod folder" Click="OpenModFolder" FontSize="16" HorizontalAlignment="Left" Foreground="{DynamicResource GenLauncherDefaultTextColor}"/>
+                        <MenuItem Header="Open game folder" Click="OpenGameFolder" FontSize="16" HorizontalAlignment="Left" Foreground="{DynamicResource GenLauncherDefaultTextColor}"/>
+                        <MenuItem Header="Open maps folder" Click="OpenMapsFolder" FontSize="16" HorizontalAlignment="Left" Foreground="{DynamicResource GenLauncherDefaultTextColor}"/>
+                        <MenuItem Header="Open replays folder" Click="OpenReplaysFolder" FontSize="16" HorizontalAlignment="Left" Foreground="{DynamicResource GenLauncherDefaultTextColor}"/>
+                        <Separator Margin="-30,5,25,5"></Separator>
+                        <MenuItem Header="Visit ModdB page" Click="OpenModdbLink" FontSize="18" HorizontalAlignment="Left" Foreground="{DynamicResource GenLauncherDefaultTextColor}"/>
+                        <MenuItem Header="Join Discord Server" Click="OpenDiscordLink" FontSize="18" HorizontalAlignment="Left" Foreground="{DynamicResource GenLauncherDefaultTextColor}"/>
                     </ContextMenu >
                 </Grid.ContextMenu>
 
@@ -730,13 +720,13 @@
                 <ComboBox MouseEnter="BlockDragAndDrop" MouseLeave="EnableDragAndDrop" x:Name="VersionsList" Height="30" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3" ItemTemplate="{StaticResource VersionTemplate}" SelectionChanged="VersionsList_SelectionChanged" Margin="0,0,5,0" Visibility="Hidden">
                 </ComboBox>
 
-                <Border BorderThickness="2" BorderBrush="{DynamicResource GenLauncherInactiveBorder}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="2" Margin="8,-2,-2,-2">
+                <Border BorderThickness="2" BorderBrush="{DynamicResource GenLauncherInactiveBorder}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="2" Margin="23,-2,23,-2">
 
                 </Border>
 
-                <Image Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="2"  HorizontalAlignment="Left" Source="{Binding ImageSource}" Height="100" Width="500" Margin="10,0,0,0" />
+                <Image Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="2"  Source="{Binding ImageSource}" Height="100" Width="500" Margin="0,0,0,0" />
 
-                <Rectangle Margin="10,0,0,0" Grid.Row="2" Visibility="Hidden" x:Name="UpdateRectangle" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="2">
+                <Rectangle Margin="25, 0, 25, 0" Grid.Row="2" Visibility="Hidden" x:Name="UpdateRectangle" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="2">
                     <Rectangle.Fill>
                         <LinearGradientBrush x:Name="UpdateBrush">
                             <GradientStop x:Name="GradientStop1" Color="{DynamicResource GenLauncherButtonSelectionColor}" Offset="0.0" />
@@ -755,14 +745,6 @@
                         </EventTrigger>
                     </Rectangle.Triggers>
                 </Rectangle>
-
-                <local:InfoButton MouseEnter="BlockDragAndDrop" MouseLeave="EnableDragAndDrop" x:Name="DiscordButton" Style="{StaticResource DefaultButtonStyle}" Opacity="1" Grid.Row="2" Grid.Column="3" Height="26" Width="26" HorizontalAlignment="Center" Background="Transparent" Focusable="False" BorderThickness="0" Click="DiscordButton_Click" Margin="0,0,5,0">
-                    <Image Source="/Images/discord.png"/>
-                </local:InfoButton>
-
-                <local:InfoButton MouseEnter="BlockDragAndDrop" MouseLeave="EnableDragAndDrop" x:Name="ModdbButton" Style="{StaticResource DefaultButtonStyle}" Opacity="1" Grid.Row="3" Grid.Column="3" Height="29" Width="29" HorizontalAlignment="Center" Background="Transparent" Focusable="False" BorderThickness="0" Click="ModdbButton_Click" Margin="0,0,5,0">
-                    <Image Source="/Images/moddb.png"/>
-                </local:InfoButton>
 
                 <ProgressBar Grid.Row="4" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" Height="20" VerticalAlignment="Center" Margin="10,0,10,0" BorderBrush="{DynamicResource GenLauncherInactiveBorder}"/>
                 <local:InfoTextBlock MouseEnter="BlockDragAndDrop" MouseLeave="EnableDragAndDrop" FontWeight="Bold" Grid.Row="4" Foreground="Black" Opacity="1" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="40,0,40,0"/>
