--- a/GenLauncherNet/Windows/OptionsWindow.xaml
+++ b/GenLauncherNet/Windows/OptionsWindow.xaml
@@ -890,5 +890,7 @@
 
         <RadioButton x:Name="SmoothWaterBorders" Foreground="White" GroupName="none9" FontSize="16" Grid.Column="3" Grid.Row="4" Grid.RowSpan="3" Content="Smooth Water Borders" Margin="15,140,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" Click="SmoothWaterBorders_Click"/>
         <RadioButton x:Name="HeatEffects" Foreground="White" GroupName="none10" FontSize="16" Grid.Column="3" Grid.Row="4" Grid.RowSpan="3" Content="Heat Effects" Margin="205,140,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" Click="HeatEffects_Click"/>
+
+        <RadioButton x:Name="CheckModFiles" Foreground="White" GroupName="none11" FontSize="16" Grid.Column="3" Grid.Row="8" Grid.RowSpan="3" Margin="15,5,0,0" Content="Check mod files integrity (works only for the latest version)"  HorizontalAlignment="Left"  VerticalAlignment="Top" Click="CheckModFiles_Click"/>
     </Grid>
 </Window>
